# ocudu-matlab

./: .gitignore  .gitlab-ci.yml  COPYRIGHT  CompatibilityTable.md  Dockerfile  README.md  REUSE.toml  ocuduChEqualizerUnittest.m  ocuduChEstimatorUnittest.m  ocuduDFTProcessorUnittest.m  ocuduDemodulationMapperUnittest.m  ocuduLDPCEncoderUnittest.m  ocuduLDPCRateMatcherUnittest.m  ocuduLDPCSegmenterUnittest.m  ocuduLowPAPRSequenceUnittest.m  ocuduModulationMapperUnittest.m  ocuduNZPCSIRSGeneratorUnittest.m  ocuduOFDMDemodulatorUnittest.m  ocuduOFDMModulatorUnittest.m  ocuduOFHCompressionUnittest.m  ocuduPBCHDMRSUnittest.m  ocuduPBCHEncoderUnittest.m  ocuduPBCHModulatorUnittest.m  ocuduPDCCHCandidatesCommonUnittest.m  ocuduPDCCHCandidatesUeUnittest.m  ocuduPDCCHDMRSUnittest.m  ocuduPDCCHEncoderUnittest.m  ocuduPDCCHModulatorUnittest.m  ocuduPDCCHProcessorUnittest.m  ocuduPDSCHDMRSUnittest.m  ocuduPDSCHEncoderUnittest.m  ocuduPDSCHModulatorUnittest.m  ocuduPDSCHPTRSGeneratorUnittest.m  ocuduPDSCHProcessorUnittest.m  ocuduPRACHConfigurationUnittest.m  ocuduPRACHDemodulatorUnittest.m  ocuduPRACHDetectorUnittest.m  ocuduPRACHGeneratorUnittest.m  ocuduPRACHSchedulerUnittest.m  ocuduPRSGeneratorUnittest.m  (+25 more)
+ocuduMEX/source/: .clang-format  .clang-tidy  CMakeLists.txt
+ocuduMEX/source/cmake/modules/: FindOCUDU.cmake
+ocuduMEX/source/docs/: CMakeLists.txt  REUSE.toml  header.html  main.dox  math_macros.tex
+ocuduMEX/source/include/ocudu_matlab/: ocudu_mex_dispatcher.h
+ocuduMEX/source/include/ocudu_matlab/support/: factory_functions.h  matlab_to_ocudu.h  memento.h  resource_grid.h  to_span.h
+ocuduMEX/source/lib/: CMakeLists.txt
+ocuduMEX/source/lib/phy/: CMakeLists.txt
+ocuduMEX/source/lib/phy/upper/: CMakeLists.txt
+ocuduMEX/source/lib/support/: CMakeLists.txt  resource_grid.cpp
+ocuduMEX/source/unittests/: CMakeLists.txt  ocudu_mex_dispatcher_test.cpp
ocuduVectorTests/: CMakeLists.txt  README.md
ocuduVectorTests/ofh/compression/: CMakeLists.txt  ofh_compression_test.cpp  ofh_compression_test_data.h
ocuduVectorTests/phy/generic_functions/: CMakeLists.txt  dft_processor_test_data.h  dft_processor_vectortest.cpp
ocuduVectorTests/phy/generic_functions/transform_precoding/: CMakeLists.txt  transform_precoder_test_data.h  transform_precoder_vectortest.cpp
ocuduVectorTests/phy/lower/modulation/: CMakeLists.txt  ofdm_demodulator_test_data.h  ofdm_demodulator_vectortest.cpp  ofdm_modulator_test_data.h  ofdm_modulator_vectortest.cpp  ofdm_prach_demodulator_test.cpp  ofdm_prach_demodulator_test_data.h
ocuduVectorTests/phy/upper/channel_coding/ldpc/: CMakeLists.txt  ldpc_enc_dec_test.cpp  ldpc_encoder_test_data.h  ldpc_rate_matcher_test_data.h  ldpc_rm_test.cpp  ldpc_segmenter_test.cpp  ldpc_segmenter_test_data.h
ocuduVectorTests/phy/upper/channel_coding/short/: CMakeLists.txt  short_block_detector_test.cpp  short_block_detector_test_data.h  short_block_encoder_test.cpp  short_block_encoder_test_data.h
ocuduVectorTests/phy/upper/channel_modulation/: CMakeLists.txt  demodulation_mapper_test.cpp  demodulation_mapper_test_data.h  modulation_mapper_test.cpp  modulation_mapper_test_data.h
ocuduVectorTests/phy/upper/channel_processors/: CMakeLists.txt  prach_detector_test_data.h  prach_detector_vectortest.cpp  prach_generator_test_data.h  prach_generator_vectortest.cpp
ocuduVectorTests/phy/upper/channel_processors/pdcch/: CMakeLists.txt  pdcch_encoder_test.cpp  pdcch_encoder_test_data.h  pdcch_modulator_test.cpp  pdcch_modulator_test_data.h  pdcch_processor_test_data.h  pdcch_processor_vectortest.cpp
ocuduVectorTests/phy/upper/channel_processors/pdsch/: CMakeLists.txt  pdsch_encoder_test.cpp  pdsch_encoder_test_data.h  pdsch_modulator_test.cpp  pdsch_modulator_test_data.h  pdsch_processor_test_data.h  pdsch_processor_vectortest.cpp
ocuduVectorTests/phy/upper/channel_processors/prach/: CMakeLists.txt  prach_detector_test_data.h  prach_detector_vectortest.cpp  prach_generator_test_data.h  prach_generator_vectortest.cpp
ocuduVectorTests/phy/upper/channel_processors/pucch/: CMakeLists.txt  pucch_demodulator_format2_test.cpp  pucch_demodulator_format2_test_data.h  pucch_demodulator_format3_test.cpp  pucch_demodulator_format3_test_data.h  pucch_demodulator_format4_test.cpp  pucch_demodulator_format4_test_data.h  pucch_processor_format0_test_data.h  pucch_processor_format0_vectortest.cpp  pucch_processor_format1_test_data.h  pucch_processor_format1_vectortest.cpp  pucch_processor_format2_test_data.h  pucch_processor_format2_vectortest.cpp  pucch_processor_format3_test_data.h  pucch_processor_format3_vectortest.cpp  pucch_processor_format4_test_data.h  pucch_processor_format4_vectortest.cpp
ocuduVectorTests/phy/upper/channel_processors/pusch/: CMakeLists.txt  pusch_decoder_test_data.h  pusch_decoder_vectortest.cpp  pusch_demodulator_notifier_test_doubles.h  pusch_demodulator_test_data.h  pusch_demodulator_vectortest.cpp  pusch_processor_test_data.h  pusch_processor_vectortest.cpp  ulsch_demultiplex_test.cpp  ulsch_demultiplex_test_data.h
ocuduVectorTests/phy/upper/channel_processors/ssb/: CMakeLists.txt  (+6 more)
ocuduVectorTests/phy/upper/equalization/: CMakeLists.txt  channel_equalizer_test.cpp  channel_equalizer_test_data.h
ocuduVectorTests/phy/upper/sequence_generators/: CMakeLists.txt  low_papr_sequence_generator_test.cpp  low_papr_sequence_generator_test_data.h
ocuduVectorTests/phy/upper/signal_processors/: CMakeLists.txt
ocuduVectorTests/ran/: CMakeLists.txt
ocuduVectorTests/ran/pdcch/: pdcch_candidates_common_test.cpp  pdcch_candidates_common_test_data.h  pdcch_candidates_ue_test.cpp  pdcch_candidates_ue_test_data.h
ocuduVectorTests/ran/prach/: prach_configuration_test_data.h
ocuduVectorTests/ran/pusch/: pusch_tpmi_select_test.cpp  pusch_tpmi_select_test_data.h  ulsch_info_test.cpp  ulsch_info_test_data.h
ocuduVectorTests/ran/sch/: tbs_calculator_test.cpp  tbs_calculator_test_data.h
ocuduVectorTests/scheduler/common_scheduling/: CMakeLists.txt  prach_scheduler_test_data.h  prach_scheduler_vectortest.cpp
ocuduVectorTests/support/: compare_sequences.h
(+209 files in other folders)
