#
# Copyright 2021-2025 Software Radio Systems Limited
#
# By using this file, you agree to the terms and conditions set
# forth in the LICENSE file which can be found at the top level of
# the distribution.
#

# This CMakeLists complements the main OCUDU CMakeLists to provide vector tests. It is not meant to be used on its own.

########################################## CONFIGURATION ###########################################

set(OCUDU_VECTORTESTS_DIR ${CMAKE_CURRENT_SOURCE_DIR})

# Import clang-format and clang-tidy configuration from the OCUDU project (neede by some IDEs since this folder
# is usually imported as a symbolic link).
if (NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/.clang-format)
    file(CREATE_LINK ${CMAKE_SOURCE_DIR}/.clang-format ${CMAKE_CURRENT_SOURCE_DIR}/.clang-format SYMBOLIC)
endif (NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/.clang-format)

if (NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/.clang-tidy)
    file(CREATE_LINK ${CMAKE_SOURCE_DIR}/.clang-tidy ${CMAKE_CURRENT_SOURCE_DIR}/.clang-tidy SYMBOLIC)
endif (NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/.clang-tidy)

# Suppress "<ciso646> is deprecated in C++17" warnings caused by gtest when compiling with gcc 15.1.
ADD_CXX_COMPILER_FLAG_IF_AVAILABLE(-Wno-deprecated HAVE_NO_DEPRECATED)

# Add a custom empty target that will have all vector-based tests as dependencies.
add_custom_target(all_vector_tests)

######################################### ADD VECTOR TESTS #########################################

# Adds a vector-based test.
#
# Adds a test for TARGET to be run by ctest that uses input and output data generated by an external tool. The test is
# labeled as vectortest.
#
# It optionally uses the vectors contained in VECTOR_FILE (this is a tar.gz file containing all vectors in the
# appropriate format, which will be extracted in the proper build directory). Set VECTOR_FILE to none if no external
# test vector files are required.
#
# Other arguments to the underlying add_test command can be provided through TEST_ARGS.
macro(ADD_TEST_VECTOR TARGET VECTOR_FILE TEST_ARGS)
    if (NOT (${VECTOR_FILE} STREQUAL none))
        if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${VECTOR_FILE})
            file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/test_data)
            add_custom_command(
                    TARGET ${TARGET}
                    POST_BUILD
                    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/test_data
                    COMMAND ${CMAKE_COMMAND} -E tar xf ${CMAKE_CURRENT_SOURCE_DIR}/${VECTOR_FILE}
                    VERBATIM)
        else (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${VECTOR_FILE})
            message(FATAL_ERROR "Vector file ${CMAKE_CURRENT_SOURCE_DIR}/${VECTOR_FILE} does not exist.")
        endif (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${VECTOR_FILE})
    endif (NOT (${VECTOR_FILE} STREQUAL none))
    add_test(${TARGET} ${TARGET} ${TEST_ARGS})
    set_property(TEST ${TARGET} APPEND PROPERTY LABELS vectortest)
    # Add the target to the "all_vector_tests" target.
    add_dependencies(all_vector_tests ${TARGET})
endmacro(ADD_TEST_VECTOR TARGET VECTOR_FILE ...)

add_subdirectory(ofh/compression)
add_subdirectory(phy/generic_functions)
add_subdirectory(phy/lower/modulation)
add_subdirectory(phy/upper/channel_coding/ldpc)
add_subdirectory(phy/upper/channel_coding/short)
add_subdirectory(phy/upper/channel_modulation)
add_subdirectory(phy/upper/channel_processors)
add_subdirectory(phy/upper/equalization)
add_subdirectory(phy/upper/sequence_generators)
add_subdirectory(phy/upper/signal_processors)
add_subdirectory(ran)
add_subdirectory(scheduler/common_scheduling)
